Sun Jun  7 18:44:17 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* plug-ins/webbrowser/web-browser.scm: changed the URL for the
	Manual

Sun Jun  7 12:39:56 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/libgck/gck/gcktypes.h
	* plug-ins/libgck/gck/gckui.h
	* plug-ins/libgck/gck/gckui.c
	* plug-ins/ifscompose/ifscompose.c: changes for the new accelerator
	stuff

Sun Jun  7 11:04:38 1998  Tim Janik  <timj@gtk.org>

	* app/gradient.c (cpopup_create_menu_item_with_label): use GtkAccelLabel
	when creating a menuitems label seperatedly.

	* app/commands.h:
 	* app/commands.c:
	(tips_dialog_cmd_callback):
	(filters_repeat_cmd_callback):
	(tools_select_cmd_callback): make use of the callback_action argument.

	* app/main.c (main): removed gtk_accelerator_table_set_mod_mask(),
	since gtk provides decent default values now.

	* app/layers_dialog.c:
	* app/interface.c:
	* app/indexed_palette.c:
	* app/channels_dialog.c:
	* app/buildmenu.c:
 	conversions for use of GtkAccelGroup.

	* app/buildmenu.c:
	* app/gradient.c:
	installed accelerators are locked, because these code portions don't
	support accelerator saving.

	* ChangeLog:
	* ChangeLog.pre-1-0: ChangeLog split up.

Sun Jun  7 01:21:43 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/script-fu/script-fu.c: fixed param passing for
	INT8 and INT16 types. This used to fail on big endian machines

	* plug-ins/maze/maze.c: properly handle INT8 and INT16 types.
	With these two fixes, circuit.scm will no longer crash on
	big endian machines

Sun Jun  7 00:19:22 EDT 1998  Adrian Likins <adrian@gimp.org>

	* app/commands.c: Reworked the file_new dialog to
	be a little more useful. Added entries for a height
	and width in the unit of your choice, and a resolution.
	Not everythings hooked up yet, but its getting there.

Sun Jun  7 00:22:01 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/interface.c: Register private tips for all the tools -
	for use with online help later
